feat: add graph and field component

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Aplicação construida em react para o bootcamp igti"
     />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/materialize.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
